force-app/main/default/objects/Quote/fields/Ingeniero_de_Ofertas__c.field-meta.xml
<CustomField>
    <fullName>Ingeniero_de_Ofertas__c</fullName>
    <label>Ingeniero de Ofertas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ingenieros_de_Ofertas</valueSetName>
    </valueSet>
</CustomField>