force-app/main/default/objects/Quote/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <label>Vigencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vigencia_Cotizaci_n</valueSetName>
    </valueSet>
</CustomField>