force-app/main/default/objects/Quote/fields/Vigencia_Correcta__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Correcta__c</fullName>
    <label>¿Vigencia Correcta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>